--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-    --cor-fundo: #01080E ;
-    --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333 ;
-    --cor-destaque: #2BDEFD ;
-    --cor-titulo: #D7F9FF ;
+    --cor-fundo: #00000000 ;
+    --cor-principal: #000000 ;
+    --cor-secundaria: #ffffff ;
+    --cor-destaque: #000000 ;
+    --cor-titulo: #ff0015 ;
 }
