--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 :root{
-    --cor-fundo: #00000000 ;
-    --cor-principal: #000000 ;
-    --cor-secundaria: #ffffff ;
-    --cor-destaque: #000000 ;
-    --cor-titulo: #ff0015 ;
-
+    --cor-fundo: #b90707;
+    --cor-principal: #0B0D20 ;
+    --cor-secundaria: #212333;
+    --cor-destaque: #f74d09;
+    --cor-texto: #D7F9FF;
 }
 
-body {
+body{
     background-color: var(--cor-fundo);
     color: var(--cor-texto);
     display: flex;
@@ -18,7 +17,7 @@ body {
 
 .caixa-principal{
     background-color: var(--cor-principal);
-    Width: 90%;
+    width: 90%;
     max-width: 600px;
     text-align: center;
     padding: 20px;
@@ -28,7 +27,11 @@ h1{
     color: var(--cor-destaque);
 }
 
-button {
+.caixa-perguntas{
+    padding-bottom: 10px;
+}
+
+button{
     background-color: var(--cor-secundaria);
     color: var(--cor-texto);
     border: none;
