--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --cor-fundo: #b90707;
     --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333;
+    --cor-secundaria: #0f23bd;
     --cor-destaque: #f74d09;
     --cor-texto: #D7F9FF;
 }
