--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    --cor-fundo: #b90707;
+    --cor-fundo: #01080E;
     --cor-principal: #0B0D20 ;
-    --cor-secundaria: #0f23bd;
-    --cor-destaque: #f74d09;
+    --cor-secundaria: #212333;
+    --cor-destaque: #2BDEFD;
     --cor-texto: #D7F9FF;
 }
 
