--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    --cor-fundo: #01080E;
+    --cor-fundo: #f30000;
     --cor-principal: #0B0D20 ;
     --cor-secundaria: #212333;
-    --cor-destaque: #2BDEFD;
+    --cor-destaque: #f36d00;
     --cor-texto: #D7F9FF;
 }
 
